<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events_name"
                android:textColor="@color/grey_900"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="wrap_content"
                android:text="@string/unknown"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_600"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/time_date"
                android:textColor="@color/grey_900"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_time_date"
                android:text="@string/unknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_600"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/location"
                android:textColor="@color/grey_900"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_location"
                android:text="@string/unknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_600"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/group"
                android:textColor="@color/grey_900"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_group"
                android:text="@string/unknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_600"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/events_coordinator"
                android:textColor="@color/grey_900"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_events_coordinator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textColor="@color/grey_600"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>